[project]
name = "kalyke-apns"
description = "A library for interacting with APNs and VoIP using HTTP/2."
authors = [
    { name = "nnsnodnb", email = "nnsnodnb@gmail.com" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nnsnodnb/kalyke"
keywords = [
    "apns",
    "voip",
    "liveactivity",
    "apns provider api",
    "apple push notifications"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[tool.poetry]
packages = [
    { include = "kalyke" }
]
version = "0.0.0" # replacing poetry-dynamic-versioning

[tool.poetry.dependencies]
python = ">3.9.0,<3.9.1 || >3.9.1,<3.14"
httpx = {extras = ["http2"], version = ">=0.23.0,<0.29.0"}
PyJWT = ">=2.0.0,<2.11.0"
cryptography = ">=43,<45"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.2,<8.4.0"
black = ">=24.2,<25"
isort = "^5.10.1"
flake8 = "^7.0.0"
mypy = ">=1.8,<2"
pytest-cov = "^6.0.0"
pytest-httpx = ">=0.21.3"
pytest-asyncio = ">=0.25.0,<0.26.0"
pem = "^23.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[build-system]
requires = ["poetry-core>=1.4.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
    /(
         \.git
        |\.github
        |\.mypy_cache
        |\.pytest_cache
    )/
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 3

[tool.pytest.ini_options]
addopts = '--cov-config=.coveragerc --cov=kalyke --cov-report=xml'
junit_family = 'xunit2'
asyncio_default_fixture_loop_scope = 'function'
