[project]
name = "kalyke-apns"
description = "A library for interacting with APNs and VoIP using HTTP/2."
authors = [
    { name = "nnsnodnb", email = "nnsnodnb@gmail.com" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nnsnodnb/kalyke"
keywords = [
    "apns",
    "voip",
    "liveactivity",
    "apns provider api",
    "apple push notifications"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[tool.poetry]
packages = [
    { include = "kalyke" }
]
version = "0.0.0" # replacing poetry-dynamic-versioning

[tool.poetry.dependencies]
python = ">3.9.0,<3.9.1 || >3.9.1,<3.14"
httpx = {extras = ["http2"], version = ">=0.23.0,<0.29.0"}
PyJWT = ">=2.0.0,<2.11.0"
cryptography = ">=43,<45"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.2,<8.4.0"
mypy = ">=1.8,<2"
pytest-cov = "^6.0.0"
pytest-httpx = ">=0.21.3"
pytest-asyncio = ">=0.26.0,<0.27.0"
pem = "^23.1.0"
ruff = "^0.11.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[build-system]
requires = ["poetry-core>=1.4.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
addopts = '--cov-config=.coveragerc --cov=kalyke --cov-report=xml'
junit_family = 'xunit2'
asyncio_default_fixture_loop_scope = 'function'

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.report]
include = [
    "kalyke/*"
]

[tool.coverage.run]
relative_files = true
