[project]
name = "kalyke-apns"
description = "A library for interacting with APNs and VoIP using HTTP/2."
authors = [{ name = "nnsnodnb", email = "nnsnodnb@gmail.com" }]
requires-python = ">=3.10.0,<3.14"
readme = "README.md"
license = "MIT"
keywords = [
    "apns",
    "voip",
    "liveactivity",
    "apns provider api",
    "apple push notifications",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx[http2]>=0.23.0,<0.29.0",
    "pyjwt[crypto]>=2.0.0,<2.11.0",
]
dynamic = ["version"]

[project.urls]
"Source" = "https://github.com/nnsnodnb/kalyke"

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "pytest-cov",
    "pytest-httpx",
    "pytest-asyncio",
    "pem",
    "ruff",
    "hatch",
    "uv-dynamic-versioning",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["kalyke"]

[tool.hatch.build.targets.wheel]
include = ["kalyke"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "kalyke/_version.py"
vsc = "git"

[tool.uv-dynamic-versioning]
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov=kalyke --cov-report=xml"
junit_family = "xunit2"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.report]
include = [
    "kalyke/*",
]

[tool.coverage.run]
relative_files = true
