[metadata]
name = kalyke
version = attr: kalyke.__version__
url = https://github.com/nnsnodnb/kalyke
author = Yuya Oka
author_email = ahr63_gej@me.com
license = MIT
description = A library for interacting with APNs and VoIP using HTTP/2 and token based authentication.
long_description = file: README.rst
keywords =
  apns
  voip
  apns provider api
  push notifications
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
install_requires =
  pyjwt
  hyper
